# RTIAW

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
cmake/: FetchDependencies.cmake
src/: CMakeLists.txt  main.cpp
src/App/: App.cpp  App.h  ApplicationLayer.cpp  ApplicationLayer.h  CMakeLists.txt
src/App/Renderer/: BVH.cpp  BVH.h  CMakeLists.txt  Camera.cpp  Camera.h  HitRecord.h  HittableObject.cpp  HittableObject.h  HittableObjectList.cpp  HittableObjectList.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  ScatteringRecord.h  Scenes.cpp  ThreadPool.h  Utils.h
src/App/Renderer/Materials/: Dielectric.cpp  Dielectric.h  Lambertian.cpp  Lambertian.h  Material.h  Materials.h  Metal.cpp  Metal.h
src/App/Renderer/Shapes/: AABB.cpp  AABB.h  HittableObject.h  HittableObjectList.cpp  HittableObjectList.h  MovingSphere.cpp  MovingSphere.h  Parallelogram.cpp  Parallelogram.h  Plane.cpp  Plane.h  Rectangle.cpp  Rectangle.h  Shapes.h  Sphere.cpp  Sphere.h
